# swarm

./: .gitignore  README.md  pyproject.toml
examples/01_basic_run/: simple_test.sh
examples/02_modules_image_run/: test_with_modules_image.sh
src/swarm/: main.py  parser.py  slurm.py
test_data/: test_script.sh
tests/: test_main.py  test_parser.py  test_slurm.py
